product list and single product api complete with swagger doc
